from posts new ad

--- a/src/app/league-list/form/league-form.component.html
+++ b/src/app/league-list/form/league-form.component.html
@@ -1,3 +1,5 @@
+<div (click)="test()">TEST</div>
+
 <div class="p-4">
   <form
     [formGroup]="leagueForm"
@@ -274,3 +276,4 @@
     </button>
   </form>
 </div>
+<!-- {{ leagueForm.value | json }} -->
