--- a/src/app/league-list/league-list.component.html
+++ b/src/app/league-list/league-list.component.html
@@ -2,31 +2,7 @@
   <div class="flex justify-between items-center mb-6">
     <h1 class="text-2xl font-bold text-gray-700 font-nasa">Open Leagues</h1>
 
-    <!-- Filters and Buttons -->
     <div class="flex space-x-4 items-center">
-      <!-- Filter Button -->
-      <button
-        (click)="toggleFilterBox()"
-        class="px-4 py-2 bg-blue-500 text-white rounded-md shadow hover:bg-blue-600"
-      >
-        Filter
-      </button>
-
-      <!-- Sort Options -->
-      <div>
-        <label class="block text-sm font-bold text-gray-600 mb-1"
-          >Sort by:</label
-        >
-        <select
-          [(ngModel)]="sortOption"
-          (change)="sortLeagues()"
-          class="p-2 border rounded-md focus:ring focus:ring-blue-300"
-        >
-          <option value="createdAt">Created Date</option>
-          <option value="closesAt">Close Date</option>
-        </select>
-      </div>
-
       <!-- Add New League Button -->
       <button
         routerLink="new"
@@ -42,6 +18,28 @@
       >
         My Leagues
       </button>
+    </div>
+  </div>
+  <div class="flex justify-between items-center mb-2">
+    <div>Results: 3</div>
+    <div class="flex space-x-4 items-center">
+      <!-- Filter Button -->
+      <button
+        (click)="toggleFilterBox()"
+        class="px-4 py-2 bg-blue-500 text-white rounded-md shadow hover:bg-blue-600"
+      >
+        Filter
+      </button>
+
+      <!-- Sort Options -->
+      <select
+        [(ngModel)]="sortOption"
+        (change)="sortLeagues()"
+        class="p-2 border rounded-md focus:ring focus:ring-blue-300"
+      >
+        <option value="createdAt">Created Date</option>
+        <option value="closesAt">Close Date</option>
+      </select>
     </div>
   </div>
 
@@ -111,10 +109,9 @@
   </div>
 
   <!-- League Ads List -->
-  <div
-    *ngFor="let league of filteredLeagues"
-    class="bg-white p-5 mb-6 rounded-lg shadow-md border border-gray-200"
-  >
-    <league-ad [league]="league"></league-ad>
-  </div>
+  <league-ad
+    [league]="league"
+    [index]="i"
+    *ngFor="let league of filteredLeagues; let i = index"
+  ></league-ad>
 </div>
